src/parser/SysYParser.cpp

// Generated from SysY.g4 by ANTLR 4.13.1


#include "SysYVisitor.h"

#include "SysYParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct SysYParserStaticData final {
  SysYParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  SysYParserStaticData(const SysYParserStaticData&) = delete;
  SysYParserStaticData(SysYParserStaticData&&) = delete;
  SysYParserStaticData& operator=(const SysYParserStaticData&) = delete;
  SysYParserStaticData& operator=(SysYParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag sysyParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
SysYParserStaticData *sysyParserStaticData = nullptr;

void sysyParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (sysyParserStaticData != nullptr) {
    return;
  }
#else
  assert(sysyParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<SysYParserStaticData>(
    std::vector<std::string>{
      "root", "compUnit", "type", "dimensions", "varDecl", "varDef", "scalarVarDef", 
      "arrayVarDef", "initVal", "funcDef", "funcArg", "blockStmt", "stmt", 
      "assignStmt", "blankStmt", "expStmt", "ifElseStmt", "ifStmt", "whileStmt", 
      "breakStmt", "continueStmt", "retStmt", "lVal", "unaryExp", "varExp", 
      "scalarVarExp", "arrayVarExp", "funcCallExp", "numberExp", "lorExp", 
      "landExp", "equalityExp", "relationalExp", "additiveExp", "multiplicativeExp"
    },
    std::vector<std::string>{
      "", "'break'", "'const'", "'continue'", "'else'", "'float'", "'if'", 
      "'int'", "'return'", "'void'", "'while'", "'='", "'+'", "'-'", "'*'", 
      "'/'", "'%'", "'=='", "'!='", "'<'", "'<='", "'>'", "'>='", "'!'", 
      "'&&'", "'||'", "'('", "')'", "'['", "']'", "'{'", "'}'", "','", "';'", 
      "", "", "", "", "'\\n'"
    },
    std::vector<std::string>{
      "", "BREAK", "CONST", "CONTINUE", "ELSE", "FLOAT", "IF", "INT", "RETURN", 
      "VOID", "WHILE", "ASSIGN", "ADD", "SUB", "MUL", "DIV", "MOD", "EQ", 
      "NE", "LT", "LE", "GT", "GE", "LNOT", "LAND", "LOR", "LP", "RP", "LB", 
      "RB", "LC", "RC", "COMMA", "SEMI", "Ident", "IntConst", "FloatConst", 
      "Whitespace", "Newline", "BlockComment", "LineComment"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  sysyParserStaticData = staticData.release();
}

}

SysYParser::SysYParser(TokenStream *input) : SysYParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

SysYParser::SysYParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  SysYParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *sysyParserStaticData->atn, sysyParserStaticData->decisionToDFA, sysyParserStaticData->sharedContextCache, options);
}

SysYParser::~SysYParser() {
  delete _interpreter;
}

const atn::ATN& SysYParser::getATN() const {
  return *sysyParserStaticData->atn;
}

std::string SysYParser::getGrammarFileName() const {
  return "SysY.g4";
}

const std::vector<std::string>& SysYParser::getRuleNames() const {
  return sysyParserStaticData->ruleNames;
}

const dfa::Vocabulary& SysYParser::getVocabulary() const {
  return sysyParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView SysYParser::getSerializedATN() const {
  return sysyParserStaticData->serializedATN;
}


//----------------- RootContext ------------------------------------------------------------------

SysYParser::RootContext::RootContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<SysYParser::CompUnitContext *> SysYParser::RootContext::compUnit() {
  return getRuleContexts<SysYParser::CompUnitContext>();
}

SysYParser::CompUnitContext* SysYParser::RootContext::compUnit(size_t i) {
  return getRuleContext<SysYParser::CompUnitContext>(i);
}


size_t SysYParser::RootContext::getRuleIndex() const {
  return SysYParser::RuleRoot;
}


std::any SysYParser::RootContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SysYVisitor*>(visitor))
    return parserVisitor->visitRoot(this);
  else
    return visitor->visitChildren(this);
}

SysYParser::RootContext* SysYParser::root() {
  RootContext *_localctx = _tracker.createInstance<RootContext>(_ctx, getState());
  enterRule(_localctx, 0, SysYParser::RuleRoot);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(73);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 676) != 0)) {
      setState(70);
      compUnit();
      setState(75);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- CompUnitContext ------------------------------------------------------------------

SysYParser::CompUnitContext::CompUnitContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

SysYParser::VarDeclContext* SysYParser::CompUnitContext::varDecl() {
  return getRuleContext<SysYParser::VarDeclContext>(0);
}

SysYParser::FuncDefContext* SysYParser::CompUnitContext::funcDef() {
  return getRuleContext<SysYParser::FuncDefContext>(0);
}


size_t SysYParser::CompUnitContext::getRuleIndex() const {
  return SysYParser::RuleCompUnit;
}


std::any SysYParser::CompUnitContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SysYVisitor*>(visitor))
    return parserVisitor->visitCompUnit(this);
  else
    return visitor->visitChildren(this);
}

SysYParser::CompUnitContext* SysYParser::compUnit() {
  CompUnitContext *_localctx = _tracker.createInstance<CompUnitContext>(_ctx, getState());
  enterRule(_localctx, 2, SysYParser::RuleCompUnit);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(78);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(76);
      varDecl();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(77);
      funcDef();
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TypeContext ------------------------------------------------------------------

SysYParser::TypeContext::TypeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* SysYParser::TypeContext::INT() {
  return getToken(SysYParser::INT, 0);
}

tree::TerminalNode* SysYParser::TypeContext::FLOAT() {
  return getToken(SysYParser::FLOAT, 0);
}

tree::TerminalNode* SysYParser::TypeContext::VOID() {
  return getToken(SysYParser::VOID, 0);
}


size_t SysYParser::TypeContext::getRuleIndex() const {
  return SysYParser::RuleType;
}


std::any SysYParser::TypeContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SysYVisitor*>(visitor))
    return parserVisitor->visitType(this);
  else
    return visitor->visitChildren(this);
}

SysYParser::TypeContext* SysYParser::type() {
  TypeContext *_localctx = _tracker.createInstance<TypeContext>(_ctx, getState());
  enterRule(_localctx, 4, SysYParser::RuleType);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(80);
    _la = _input->LA(1);
    if (!((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 672) != 0))) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DimensionsContext ------------------------------------------------------------------

SysYParser::DimensionsContext::DimensionsContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> SysYParser::DimensionsContext::LB() {
  return getTokens(SysYParser::LB);
}

tree::TerminalNode* SysYParser::DimensionsContext::LB(size_t i) {
  return getToken(SysYParser::LB, i);
}

std::vector<SysYParser::AdditiveExpContext *> SysYParser::DimensionsContext::additiveExp() {
  return getRuleContexts<SysYParser::AdditiveExpContext>();
}

SysYParser::AdditiveExpContext* SysYParser::DimensionsContext::additiveExp(size_t i) {
  return getRuleContext<SysYParser::AdditiveExpContext>(i);
}

std::vector<tree::TerminalNode *> SysYParser::DimensionsContext::RB() {
  return getTokens(SysYParser::RB);
}

tree::TerminalNode* SysYParser::DimensionsContext::RB(size_t i) {
  return getToken(SysYParser::RB, i);
}


size_t SysYParser::DimensionsContext::getRuleIndex() const {
  return SysYParser::RuleDimensions;
}


std::any SysYParser::DimensionsContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SysYVisitor*>(visitor))
    return parserVisitor->visitDimensions(this);
  else
    return visitor->visitChildren(this);
}

SysYParser::DimensionsContext* SysYParser::dimensions() {
  DimensionsContext *_localctx = _tracker.createInstance<DimensionsContext>(_ctx, getState());
  enterRule(_localctx, 6, SysYParser::RuleDimensions);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(86); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(82);
      match(SysYParser::LB);
      setState(83);
      additiveExp();
      setState(84);
      match(SysYParser::RB);
      setState(88); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while (_la == SysYParser::LB);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VarDeclContext ------------------------------------------------------------------

SysYParser::VarDeclContext::VarDeclContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

SysYParser::TypeContext* SysYParser::VarDeclContext::type() {
  return getRuleContext<SysYParser::TypeContext>(0);
}

std::vector<SysYParser::VarDefContext *> SysYParser::VarDeclContext::varDef() {
  return getRuleContexts<SysYParser::VarDefContext>();
}

SysYParser::VarDefContext* SysYParser::VarDeclContext::varDef(size_t i) {
  return getRuleContext<SysYParser::VarDefContext>(i);
}

tree::TerminalNode* SysYParser::VarDeclContext::SEMI() {
  return getToken(SysYParser::SEMI, 0);
}

tree::TerminalNode* SysYParser::VarDeclContext::CONST() {
  return getToken(SysYParser::CONST, 0);
}

std::vector<tree::TerminalNode *> SysYParser::VarDeclContext::COMMA() {
  return getTokens(SysYParser::COMMA);
}

tree::TerminalNode* SysYParser::VarDeclContext::COMMA(size_t i) {
  return getToken(SysYParser::COMMA, i);
}


size_t SysYParser::VarDeclContext::getRuleIndex() const {
  return SysYParser::RuleVarDecl;
}


std::any SysYParser::VarDeclContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SysYVisitor*>(visitor))
    return parserVisitor->visitVarDecl(this);
  else
    return visitor->visitChildren(this);
}

SysYParser::VarDeclContext* SysYParser::varDecl() {
  VarDeclContext *_localctx = _tracker.createInstance<VarDeclContext>(_ctx, getState());
  enterRule(_localctx, 8, SysYParser::RuleVarDecl);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(91);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == SysYParser::CONST) {
      setState(90);
      match(SysYParser::CONST);
    }
    setState(93);
    type();
    setState(94);
    varDef();
    setState(99);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == SysYParser::COMMA) {
      setState(95);
      match(SysYParser::COMMA);
      setState(96);
      varDef();
      setState(101);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(102);
    match(SysYParser::SEMI);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VarDefContext ------------------------------------------------------------------

SysYParser::VarDefContext::VarDefContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

SysYParser::ScalarVarDefContext* SysYParser::VarDefContext::scalarVarDef() {
  return getRuleContext<SysYParser::ScalarVarDefContext>(0);
}

SysYParser::ArrayVarDefContext* SysYParser::VarDefContext::arrayVarDef() {
  return getRuleContext<SysYParser::ArrayVarDefContext>(0);
}


size_t SysYParser::VarDefContext::getRuleIndex() const {
  return SysYParser::RuleVarDef;
}


std::any SysYParser::VarDefContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SysYVisitor*>(visitor))
    return parserVisitor->visitVarDef(this);
  else
    return visitor->visitChildren(this);
}

SysYParser::VarDefContext* SysYParser::varDef() {
  VarDefContext *_localctx = _tracker.createInstance<VarDefContext>(_ctx, getState());
  enterRule(_localctx, 10, SysYParser::RuleVarDef);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(106);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 5, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(104);
      scalarVarDef();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(105);
      arrayVarDef();
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ScalarVarDefContext ------------------------------------------------------------------

SysYParser::ScalarVarDefContext::ScalarVarDefContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* SysYParser::ScalarVarDefContext::Ident() {
  return getToken(SysYParser::Ident, 0);
}

tree::TerminalNode* SysYParser::ScalarVarDefContext::ASSIGN() {
  return getToken(SysYParser::ASSIGN, 0);
}

SysYParser::AdditiveExpContext* SysYParser::ScalarVarDefContext::additiveExp() {
  return getRuleContext<SysYParser::AdditiveExpContext>(0);
}


size_t SysYParser::ScalarVarDefContext::getRuleIndex() const {
  return SysYParser::RuleScalarVarDef;
}


std::any SysYParser::ScalarVarDefContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SysYVisitor*>(visitor))
    return parserVisitor->visitScalarVarDef(this);
  else
    return visitor->visitChildren(this);
}

SysYParser::ScalarVarDefContext* SysYParser::scalarVarDef() {
  ScalarVarDefContext *_localctx = _tracker.createInstance<ScalarVarDefContext>(_ctx, getState());
  enterRule(_localctx, 12, SysYParser::RuleScalarVarDef);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(108);
    match(SysYParser::Ident);
    setState(111);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == SysYParser::ASSIGN) {
      setState(109);
      match(SysYParser::ASSIGN);
      setState(110);
      additiveExp();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ArrayVarDefContext ------------------------------------------------------------------

SysYParser::ArrayVarDefContext::ArrayVarDefContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* SysYParser::ArrayVarDefContext::Ident() {
  return getToken(SysYParser::Ident, 0);
}

SysYParser::DimensionsContext* SysYParser::ArrayVarDefContext::dimensions() {
  return getRuleContext<SysYParser::DimensionsContext>(0);
}

tree::TerminalNode* SysYParser::ArrayVarDefContext::ASSIGN() {
  return getToken(SysYParser::ASSIGN, 0);
}

SysYParser::InitValContext* SysYParser::ArrayVarDefContext::initVal() {
  return getRuleContext<SysYParser::InitValContext>(0);
}


size_t SysYParser::ArrayVarDefContext::getRuleIndex() const {
  return SysYParser::RuleArrayVarDef;
}


std::any SysYParser::ArrayVarDefContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SysYVisitor*>(visitor))
    return parserVisitor->visitArrayVarDef(this);
  else
    return visitor->visitChildren(this);
}

SysYParser::ArrayVarDefContext* SysYParser::arrayVarDef() {
  ArrayVarDefContext *_localctx = _tracker.createInstance<ArrayVarDefContext>(_ctx, getState());
  enterRule(_localctx, 14, SysYParser::RuleArrayVarDef);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(113);
    match(SysYParser::Ident);
    setState(114);
    dimensions();
    setState(117);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == SysYParser::ASSIGN) {
      setState(115);
      match(SysYParser::ASSIGN);
      setState(116);
      initVal();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- InitValContext ------------------------------------------------------------------

SysYParser::InitValContext::InitValContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

SysYParser::AdditiveExpContext* SysYParser::InitValContext::additiveExp() {
  return getRuleContext<SysYParser::AdditiveExpContext>(0);
}

tree::TerminalNode* SysYParser::InitValContext::LC() {
  return getToken(SysYParser::LC, 0);
}

tree::TerminalNode* SysYParser::InitValContext::RC() {
  return getToken(SysYParser::RC, 0);
}

std::vector<SysYParser::InitValContext *> SysYParser::InitValContext::initVal() {
  return getRuleContexts<SysYParser::InitValContext>();
}

SysYParser::InitValContext* SysYParser::InitValContext::initVal(size_t i) {
  return getRuleContext<SysYParser::InitValContext>(i);
}

std::vector<tree::TerminalNode *> SysYParser::InitValContext::COMMA() {
  return getTokens(SysYParser::COMMA);
}

tree::TerminalNode* SysYParser::InitValContext::COMMA(size_t i) {
  return getToken(SysYParser::COMMA, i);
}


size_t SysYParser::InitValContext::getRuleIndex() const {
  return SysYParser::RuleInitVal;
}


std::any SysYParser::InitValContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SysYVisitor*>(visitor))
    return parserVisitor->visitInitVal(this);
  else
    return visitor->visitChildren(this);
}

SysYParser::InitValContext* SysYParser::initVal() {
  InitValContext *_localctx = _tracker.createInstance<InitValContext>(_ctx, getState());
  enterRule(_localctx, 16, SysYParser::RuleInitVal);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(132);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case SysYParser::ADD:
      case SysYParser::SUB:
      case SysYParser::LNOT:
      case SysYParser::LP:
      case SysYParser::Ident:
      case SysYParser::IntConst:
      case SysYParser::FloatConst: {
        enterOuterAlt(_localctx, 1);
        setState(119);
        additiveExp();
        break;
      }

      case SysYParser::LC: {
        enterOuterAlt(_localctx, 2);
        setState(120);
        match(SysYParser::LC);
        setState(129);
        _errHandler->sync(this);

        _la = _input->LA(1);
        if ((((_la & ~ 0x3fULL) == 0) &&
          ((1ULL << _la) & 121408335872) != 0)) {
          setState(121);
          initVal();
          setState(126);
          _errHandler->sync(this);
          _la = _input->LA(1);
          while (_la == SysYParser::COMMA) {
            setState(122);
            match(SysYParser::COMMA);
            setState(123);
            initVal();
            setState(128);
            _errHandler->sync(this);
            _la = _input->LA(1);
          }
        }
        setState(131);
        match(SysYParser::RC);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FuncDefContext ------------------------------------------------------------------

SysYParser::FuncDefContext::FuncDefContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

SysYParser::TypeContext* SysYParser::FuncDefContext::type() {
  return getRuleContext<SysYParser::TypeContext>(0);
}

tree::TerminalNode* SysYParser::FuncDefContext::Ident() {
  return getToken(SysYParser::Ident, 0);
}

tree::TerminalNode* SysYParser::FuncDefContext::LP() {
  return getToken(SysYParser::LP, 0);
}

tree::TerminalNode* SysYParser::FuncDefContext::RP() {
  return getToken(SysYParser::RP, 0);
}

SysYParser::BlockStmtContext* SysYParser::FuncDefContext::blockStmt() {
  return getRuleContext<SysYParser::BlockStmtContext>(0);
}

std::vector<SysYParser::FuncArgContext *> SysYParser::FuncDefContext::funcArg() {
  return getRuleContexts<SysYParser::FuncArgContext>();
}

SysYParser::FuncArgContext* SysYParser::FuncDefContext::funcArg(size_t i) {
  return getRuleContext<SysYParser::FuncArgContext>(i);
}

std::vector<tree::TerminalNode *> SysYParser::FuncDefContext::COMMA() {
  return getTokens(SysYParser::COMMA);
}

tree::TerminalNode* SysYParser::FuncDefContext::COMMA(size_t i) {
  return getToken(SysYParser::COMMA, i);
}


size_t SysYParser::FuncDefContext::getRuleIndex() const {
  return SysYParser::RuleFuncDef;
}


std::any SysYParser::FuncDefContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SysYVisitor*>(visitor))
    return parserVisitor->visitFuncDef(this);
  else
    return visitor->visitChildren(this);
}

SysYParser::FuncDefContext* SysYParser::funcDef() {
  FuncDefContext *_localctx = _tracker.createInstance<FuncDefContext>(_ctx, getState());
  enterRule(_localctx, 18, SysYParser::RuleFuncDef);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(134);
    type();
    setState(135);
    match(SysYParser::Ident);
    setState(136);
    match(SysYParser::LP);
    setState(145);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 672) != 0)) {
      setState(137);
      funcArg();
      setState(142);
      _errHandler->sync(this);
      _la = _input->LA(1);
      while (_la == SysYParser::COMMA) {
        setState(138);
        match(SysYParser::COMMA);
        setState(139);
        funcArg();
        setState(144);
        _errHandler->sync(this);
        _la = _input->LA(1);
      }
    }
    setState(147);
    match(SysYParser::RP);
    setState(148);
    blockStmt();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FuncArgContext ------------------------------------------------------------------

SysYParser::FuncArgContext::FuncArgContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

SysYParser::TypeContext* SysYParser::FuncArgContext::type() {
  return getRuleContext<SysYParser::TypeContext>(0);
}

tree::TerminalNode* SysYParser::FuncArgContext::Ident() {
  return getToken(SysYParser::Ident, 0);
}

std::vector<tree::TerminalNode *> SysYParser::FuncArgContext::LB() {
  return getTokens(SysYParser::LB);
}

tree::TerminalNode* SysYParser::FuncArgContext::LB(size_t i) {
  return getToken(SysYParser::LB, i);
}

std::vector<tree::TerminalNode *> SysYParser::FuncArgContext::RB() {
  return getTokens(SysYParser::RB);
}

tree::TerminalNode* SysYParser::FuncArgContext::RB(size_t i) {
  return getToken(SysYParser::RB, i);
}

std::vector<SysYParser::AdditiveExpContext *> SysYParser::FuncArgContext::additiveExp() {
  return getRuleContexts<SysYParser::AdditiveExpContext>();
}

SysYParser::AdditiveExpContext* SysYParser::FuncArgContext::additiveExp(size_t i) {
  return getRuleContext<SysYParser::AdditiveExpContext>(i);
}


size_t SysYParser::FuncArgContext::getRuleIndex() const {
  return SysYParser::RuleFuncArg;
}


std::any SysYParser::FuncArgContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SysYVisitor*>(visitor))
    return parserVisitor->visitFuncArg(this);
  else
    return visitor->visitChildren(this);
}

SysYParser::FuncArgContext* SysYParser::funcArg() {
  FuncArgContext *_localctx = _tracker.createInstance<FuncArgContext>(_ctx, getState());
  enterRule(_localctx, 20, SysYParser::RuleFuncArg);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(150);
    type();
    setState(151);
    match(SysYParser::Ident);
    setState(163);
    _errHandler->sync(this);
